# AutomatedMicroscopy

./: .gitmodules  CMakeLists.txt  README.md
CellCounter/: CMakeLists.txt  main.cpp
ModelLauncher/: CMakeLists.txt
ModelLauncher/include/: constants.h  modellauncher.h  modellauncherexception.h
ModelLauncher/include/nn/: autobackend.h
ModelLauncher/src/: main.cpp  modellauncher.cpp
ModelLauncher/src/nn/: autobackend.cpp  onnx_model_base.cpp
ModelLauncher/src/utils/: common.cpp  modellauncherexception.cpp  ops.cpp
